src/main/java/example/news/error/exceptions/UnsupportedStateException.java
package example.news.error.exceptions;

public class UnsupportedStateException extends RuntimeException {
    public UnsupportedStateException(String message) {
        super(message);
    }
}
